# voice-typing-2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  compose.yml  pyproject.toml  start-linux.sh
scripts/: __init__.py
src/voice_typing/: __init__.py  keyboard_manager.py  main.py  shortcut_trigger.py  text_input_manager.py  text_typer.py
src/voice_typing/domain/: __init__.py  models.py  ports.py
src/voice_typing/infrastructure/: whisper_client.py
tests/: __init__.py  test_main.py  test_whisper_client_integration.py  test_whisper_integration.py
voice_typing/: __init__.py  audio_recorder.py  main.py  shortcut_trigger.py  sound_player.py  text_typer.py  whisper_client.py
